k8s/mysql.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: sandy7461/todoapp_mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          emptyDir: {}  
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: todo-app
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
