k8s/server.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-server
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-server
  template:
    metadata:
      labels:
        app: todo-server
    spec:
      containers:
        - name: server
          image: sandy7461/todoapp_server:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-server-svc
  namespace: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-server
  ports:
    - port: 5000
      targetPort: 5000
