k8s/todo-app.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app
---
# MySQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: sandy7461/todoapp_mysql:latest   # <--- Docker Hub image
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          emptyDir: {}                             # demo only (no persistence)
---
# MySQL Service
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: todo-app
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
---
# Server Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-server
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-server
  template:
    metadata:
      labels:
        app: todo-server
    spec:
      containers:
        - name: server
          image: sandy7461/todoapp_server:latest  # <--- Docker Hub image
          ports:
            - containerPort: 5000
---
# Server Service (NodePort -> kind maps 30081 -> host 5000)
apiVersion: v1
kind: Service
metadata:
  name: todo-server-svc
  namespace: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-server
  ports:
    - port: 5000
      targetPort: 5000
  
---
# Client Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-client
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-client
  template:
    metadata:
      labels:
        app: todo-client
    spec:
      containers:
        - name: client
          image: sandy7461/todoapp_client:latest  # <--- Docker Hub image
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: todo-client-svc
  namespace: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-client
  ports:
    - port: 80
      targetPort: 80
