k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: todo-app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
   
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-client-svc
                port:
                  number: 80

          
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-server-svc
                port:
                  number: 5000
